fix packaging: add missing deps, fix PATH resolution, remove spec
- Add chokidar and zod as explicit production dependencies (were
  phantom deps only available via devDependencies transitives)
- Fix PATH in packaged mode: GUI-launched Electron apps don't inherit
  shell PATH, so resolve it via login shell or fallback paths
- Disable asar for now (ESM dynamic imports fail inside asar)
- Remove app_spec.txt (no longer needed in repo)

--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "@monaco-editor/react": "^4.6.0",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.0",
+    "chokidar": "^3.6.0",
     "electron-store": "^8.2.0",
     "isomorphic-git": "^1.25.6",
     "monaco-editor": "^0.45.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.160.0",
+    "zod": "^4.3.6",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -95,10 +97,13 @@
       {
         "from": "resources/openscad",
         "to": "openscad",
-        "filter": ["**/*", "!.gitkeep"]
+        "filter": [
+          "**/*",
+          "!.gitkeep"
+        ]
       }
     ],
-    "asar": true,
+    "asar": false,
     "win": {
       "target": "nsis",
       "icon": "build/icon.png"
@@ -113,7 +118,10 @@
       "category": "public.app-category.graphics-design"
     },
     "linux": {
-      "target": ["AppImage", "deb"],
+      "target": [
+        "AppImage",
+        "deb"
+      ],
       "icon": "build/icon.png",
       "category": "Graphics"
     }
